[tool.poetry]
name = "shelled-peon"
version = "0.1.0"
description = "Entry for CSC x Creators competition 2021."
authors = ["zainthemaynnn <zainyusufazam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
